--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,7 @@
 
   .slideshow {
     display: none;
+    width: 100%;
   }
 
   .slideshow .title-works {
@@ -350,7 +351,7 @@
 
   .slideshow .content {
     margin: auto;
-    width: 230px;
+    width: 150px;
     perspective: 1000px;
     position: relative;
     padding-top: 80px;
@@ -371,30 +372,30 @@
 
   .slideshow .content .content-carrousel figure {
     width: 100%;
-    height: 150px;
+    height: 100px;
     border: 1px solid var(--complementary);
     /*overflow: hidden;*/
     position: absolute;
   }
 
   .slideshow .content .content-carrousel figure:nth-child(1) {
-    transform: rotateY(0deg) translateZ(300px);
+    transform: rotateY(0deg) translateZ(120px);
   }
 
   .slideshow .content .content-carrousel figure:nth-child(2) {
-    transform: rotateY(70deg) translateZ(300px);
+    transform: rotateY(70deg) translateZ(120px);
   }
 
   .slideshow .content .content-carrousel figure:nth-child(3) {
-    transform: rotateY(140deg) translateZ(300px);
+    transform: rotateY(140deg) translateZ(120px);
   }
 
   .slideshow .content .content-carrousel figure:nth-child(4) {
-    transform: rotateY(210deg) translateZ(300px);
+    transform: rotateY(210deg) translateZ(120px);
   }
 
   .slideshow .content .content-carrousel figure:nth-child(5) {
-    transform: rotateY(280deg) translateZ(300px);
+    transform: rotateY(280deg) translateZ(120px);
   }
 
   .slideshow .content .content-carrousel .shadow {
@@ -420,6 +421,66 @@
       transform: rotateY(0deg);
     } to{
       transform: rotateY(360deg);
+    }
+  }
+
+  @media (min-width:576px) {
+    .slideshow .content .content-carrousel figure {
+      height: 150px;
+    }
+
+    .slideshow .content {
+      width: 200px;
+    }
+
+    .slideshow .content .content-carrousel figure:nth-child(1) {
+      transform: rotateY(0deg) translateZ(180px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(2) {
+      transform: rotateY(70deg) translateZ(180px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(3) {
+      transform: rotateY(140deg) translateZ(180px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(4) {
+      transform: rotateY(210deg) translateZ(180px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(5) {
+      transform: rotateY(280deg) translateZ(180px);
+    }
+  }
+
+  @media (min-width:768px) {
+    .slideshow .content .content-carrousel figure {
+      height: 200px;
+    }
+
+    .slideshow .content {
+      width: 250px;
+    }
+
+    .slideshow .content .content-carrousel figure:nth-child(1) {
+      transform: rotateY(0deg) translateZ(300px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(2) {
+      transform: rotateY(70deg) translateZ(300px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(3) {
+      transform: rotateY(140deg) translateZ(300px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(4) {
+      transform: rotateY(210deg) translateZ(300px);
+    }
+  
+    .slideshow .content .content-carrousel figure:nth-child(5) {
+      transform: rotateY(280deg) translateZ(300px);
     }
   }
 
